Extend workspace status validation